[gd_scene load_steps=82 format=3 uid="uid://df57ph0k7sgcc"]

[ext_resource type="Texture2D" uid="uid://fsiltwn15yir" path="res://Assets/Sprites/Characters/Warrior_Blue.png" id="1_lerel"]
[ext_resource type="Shader" path="res://Shaders/player.gdshader" id="1_nn5jc"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_yfkwf"]
[ext_resource type="Texture2D" uid="uid://4v6mv1p0mhu4" path="res://Assets/Sprites/Characters/Dead.png" id="4_qkot0"]
[ext_resource type="AudioStream" uid="uid://bhbwd38m54b6a" path="res://Assets/Audio/SFX/zapsplat_warfare_sword_swing_fast_whoosh_blade_ring_001_43810.mp3" id="5_sjrvo"]
[ext_resource type="AudioStream" uid="uid://doyfrr428y0u2" path="res://Assets/Audio/SFX/zapsplat_warfare_sword_swing_fast_whoosh_blade_ring_002_43811.mp3" id="6_h7fmt"]
[ext_resource type="AudioStream" uid="uid://bvj1awwmkao0" path="res://Assets/Audio/SFX/Player/Grass Running.wav" id="7_yynsc"]
[ext_resource type="AudioStream" uid="uid://c8aj3j7ywpqsp" path="res://Assets/Audio/SFX/Player/damage_1_sean.wav" id="8_256qj"]
[ext_resource type="AudioStream" uid="uid://41io4so7ticb" path="res://Assets/Audio/SFX/Player/damage_2_sean.wav" id="9_xa4t7"]
[ext_resource type="AudioStream" uid="uid://dboh2be5na4ca" path="res://Assets/Audio/SFX/Player/damage_6_sean.wav" id="10_efwh0"]
[ext_resource type="AudioStream" uid="uid://cqlblfr60chv4" path="res://Assets/Audio/SFX/Player/Modern13.wav" id="11_fe1c7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2wh5h"]
shader = ExtResource("1_nn5jc")
shader_parameter/damage_flash = null
shader_parameter/blink = null
shader_parameter/blink_time = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_117tt"]
atlas = ExtResource("1_lerel")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1li8d"]
atlas = ExtResource("1_lerel")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtugg"]
atlas = ExtResource("1_lerel")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdwmo"]
atlas = ExtResource("1_lerel")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_frqba"]
atlas = ExtResource("1_lerel")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lplqr"]
atlas = ExtResource("1_lerel")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0377c"]
atlas = ExtResource("1_lerel")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubkj3"]
atlas = ExtResource("1_lerel")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp8d4"]
atlas = ExtResource("1_lerel")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvtnv"]
atlas = ExtResource("1_lerel")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mtq7"]
atlas = ExtResource("1_lerel")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrftd"]
atlas = ExtResource("1_lerel")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkkmv"]
atlas = ExtResource("1_lerel")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_51lm8"]
atlas = ExtResource("1_lerel")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_12ke0"]
atlas = ExtResource("1_lerel")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftrwy"]
atlas = ExtResource("1_lerel")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jwvi"]
atlas = ExtResource("1_lerel")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5u1r"]
atlas = ExtResource("1_lerel")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxqa3"]
atlas = ExtResource("1_lerel")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7pef"]
atlas = ExtResource("1_lerel")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bt4c"]
atlas = ExtResource("1_lerel")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6aun7"]
atlas = ExtResource("1_lerel")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8vl5"]
atlas = ExtResource("1_lerel")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c3fo"]
atlas = ExtResource("1_lerel")
region = Rect2(960, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo1p7"]
atlas = ExtResource("1_lerel")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1abq7"]
atlas = ExtResource("1_lerel")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv2g4"]
atlas = ExtResource("1_lerel")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8dow"]
atlas = ExtResource("1_lerel")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv7kx"]
atlas = ExtResource("1_lerel")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifu21"]
atlas = ExtResource("1_lerel")
region = Rect2(960, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr22k"]
atlas = ExtResource("1_lerel")
region = Rect2(0, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cym8g"]
atlas = ExtResource("1_lerel")
region = Rect2(192, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k1se"]
atlas = ExtResource("1_lerel")
region = Rect2(384, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_owkc7"]
atlas = ExtResource("1_lerel")
region = Rect2(576, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lku0"]
atlas = ExtResource("1_lerel")
region = Rect2(768, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_peto5"]
atlas = ExtResource("1_lerel")
region = Rect2(960, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ls3e"]
atlas = ExtResource("1_lerel")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6ldq"]
atlas = ExtResource("1_lerel")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvle8"]
atlas = ExtResource("1_lerel")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x421v"]
atlas = ExtResource("4_qkot0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgatu"]
atlas = ExtResource("4_qkot0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqpw8"]
atlas = ExtResource("4_qkot0")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tvga"]
atlas = ExtResource("4_qkot0")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ucg0"]
atlas = ExtResource("4_qkot0")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl0cr"]
atlas = ExtResource("4_qkot0")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6qek"]
atlas = ExtResource("4_qkot0")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsn78"]
atlas = ExtResource("4_qkot0")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uhah"]
atlas = ExtResource("4_qkot0")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w16f"]
atlas = ExtResource("4_qkot0")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_krvig"]
atlas = ExtResource("4_qkot0")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgkbk"]
atlas = ExtResource("4_qkot0")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijtv5"]
atlas = ExtResource("4_qkot0")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0us6a"]
atlas = ExtResource("4_qkot0")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t406k"]
atlas = ExtResource("1_lerel")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8ukx"]
atlas = ExtResource("1_lerel")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8rey"]
atlas = ExtResource("1_lerel")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_efntp"]
atlas = ExtResource("1_lerel")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa6qe"]
atlas = ExtResource("1_lerel")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy832"]
atlas = ExtResource("1_lerel")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hngy"]
atlas = ExtResource("1_lerel")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m02n6"]
atlas = ExtResource("1_lerel")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0qib"]
atlas = ExtResource("1_lerel")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_no5oa"]
atlas = ExtResource("1_lerel")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_25iup"]
atlas = ExtResource("1_lerel")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qiik"]
atlas = ExtResource("1_lerel")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_mmpbr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_117tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1li8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtugg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdwmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frqba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lplqr")
}],
"loop": false,
"name": &"attack_01",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0377c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubkj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp8d4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvtnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mtq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrftd")
}],
"loop": false,
"name": &"attack_02",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkkmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51lm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12ke0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftrwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jwvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5u1r")
}],
"loop": false,
"name": &"attack_down_01",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxqa3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7pef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bt4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aun7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8vl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c3fo")
}],
"loop": false,
"name": &"attack_down_02",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo1p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1abq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv2g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8dow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv7kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifu21")
}],
"loop": false,
"name": &"attack_up_01",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr22k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cym8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k1se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owkc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lku0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peto5")
}],
"loop": false,
"name": &"attack_up_02",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ls3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6ldq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvle8")
}],
"loop": true,
"name": &"celebrate",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x421v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgatu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqpw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tvga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ucg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl0cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6qek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsn78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uhah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w16f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krvig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgkbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijtv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0us6a")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t406k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8ukx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8rey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efntp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa6qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy832")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hngy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m02n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0qib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no5oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25iup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qiik")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdbt0"]
size = Vector2(34, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xckwy"]
size = Vector2(50, 100)

[sub_resource type="CircleShape2D" id="CircleShape2D_wwfbc"]
radius = 23.0868

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_yfkwf")
flash_duration = 0.4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["Player"]]
material = SubResource("ShaderMaterial_2wh5h")
sprite_frames = SubResource("SpriteFrames_mmpbr")
animation = &"celebrate"
autoplay = "idle"
frame_progress = 0.135734

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_mdbt0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 35)
shape = SubResource("RectangleShape2D_xckwy")
one_way_collision_margin = 0.0
debug_color = Color(0.847059, 0, 0.941176, 0.678431)

[node name="Area2D_GetItems" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_GetItems"]
shape = SubResource("CircleShape2D_wwfbc")

[node name="Sword_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sjrvo")
volume_db = -5.0
bus = &"SFX"

[node name="Sword_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_h7fmt")
volume_db = -5.0
bus = &"SFX"

[node name="GrassWalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_yynsc")
volume_db = -10.0
bus = &"SFX"

[node name="Scream1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_256qj")
volume_db = -10.0
bus = &"SFX"

[node name="Scream2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xa4t7")
volume_db = -10.0
bus = &"SFX"

[node name="Scream3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_efwh0")
volume_db = -10.0
bus = &"SFX"

[node name="Steak" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_fe1c7")
volume_db = 20.0
pitch_scale = 1.2

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="Area2D_GetItems" to="." method="_on_area_2d_get_items_area_entered"]
